# pFlogger

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  ChangeLog.md  Home.md  LICENSE  Logger.f90  PFLOGGER.mk.in  PFLOGGERConfig-version.cmake.in  PFLOGGERConfig.cmake.in  README.md  pFlogger_UserGuide.md
.github/workflows/: main.yml
app/: CMakeLists.txt  app.F90  appMpi.F90  basicLogging.F90  fileLogging.F90  loggerTest.F90  loggingWithFormat.F90  mpiFileLogging.F90  mpiLogging.F90
benchmarks/: CMakeLists.txt  basic.F90  verify.F90
cmake/: CheckCompilerCapabilities.cmake  CheckFortranSource.cmake  FindFTL.cmake  GNU.cmake  Intel.cmake  IntelLLVM.cmake  NAG.cmake  check_intrinsic_kinds.cmake  fortran_try.cmake  setCompilerFlags.cmake
cmake/modules/: .gitignore  CheckCompilerCapabilities.cmake  CheckFortranSource.cmake  DefineCMakeDefaults.cmake  DefinePlatformDefaults.cmake  PreventInSourceBuild.cmake  setCompilerFlags.cmake  supportFor_c_loc_assumed_size.F90
doc/: CMakeLists.txt  Doxyfile.in  DoxygenConfigFortran  README  logger.class.violet.html  loggerAll.class.violet.html  mainpage.txt
examples/: CMakeLists.txt
examples/basicLogging/: CMakeLists.txt  basicLogging.F90
examples/basic_config/: CMakeLists.txt  basic_config.F90
examples/mpi/: CMakeLists.txt  all_in_one.cfg  complexMpi.F90  multiLogging.F90  sharedFileHandle.F90  simpleMPI.F90
examples/serial/: CMakeLists.txt  all_in_one.cfg  complex.F90  loggingFormat.F90  loggingLevel.F90
src/: AbstractConfigBuilder.F90  AbstractFilter.F90  AbstractFilterPolyVector.F90  AbstractHandler.F90  AbstractHandlerPolyVector.F90  AbstractHandlerPolyWrapVec.F90  AbstractHandlerPtrVector.F90  AbstractLock.F90  AbstractLogger.F90  AbstracthandlerPolyWrap.F90  AbstracthandlerPolyWrapVector.F90  ArgListUtilities.F90  BasicLogger.F90  CIStringAbstractLoggerPolyMap.F90  CIStringAbstractLoggerPolyPair.F90  CIStringAbstractLoggerPolyPairVec.F90  CIStringAbstractLoggerPolyPairVecVec.F90  CIStringAbstractLoggerPolyUMap.F90  CIStringFilterMap.F90  CIStringFormatterMap.F90  CIStringHandlerMap.F90  CIStringIntegerMap.F90  CIStringLoggerPolyMap.F90  CIStringUnlimitedMap.F90  CMakeLists.txt  CaseInsensitiveString.F90  CaseInsensitiveStringLoggerPair.F90  CaseInsensitiveStringLoggerPairVector.F90  CaseInsensitiveStringLoggerPairVectorVector.F90  CaseInsensitiveStringLoggerPolyPair.F90  CaseInsensitiveStringLoggerPolyPairVector.F90  CaseInsensitiveStringLoggerPolyPairVectorVector.F90  CaseInsensitiveStringLoggerPolyUnorderedMap.F90  CaseInsensitiveStringLoggerUnorderedMap.F90  Config.F90  DefaultHandler.F90  DynamicBuffer.F90  Exception.F90  FTL_Config.F90  FastFormatter.F90  (+68 more)
src/FTL/: CIString.F90  CMakeLists.txt  CaseInsensitiveString.F90  Exception.F90  HashFunction.F90  Object.F90  String.F90  StringUtilities.F90
tests/: CMakeLists.txt  ConfigurableFilter.F90  MockDateFormat.F90  MockHandler.F90  MockMpi.F90  MockSimTime.F90  Test_ArgListUtilities.pf  Test_BasicLogger.pf  Test_Complex_Config.pf  Test_Config.pf  Test_DefaultHandler.pf  Test_FileHandler.pf  Test_Filter.pf  Test_Filterer.pf  Test_FormatHandlers.pf  Test_FormatParser.pf  Test_FormatString.pf  Test_Formatter.pf  Test_Handlers.pf  Test_LogRecord.pf  Test_Logger.pf  Test_LoggerManager.pf  Test_Logging.pf  Test_MpiCommConfig.pf  Test_MpiFileHandler.pf  Test_MpiFilter.pf  Test_MpiFormatter.pf  Test_MpiLock.pf  Test_ParserContexts.pf  Test_RotatingFileHandler.pf  Test_SeverityLevels.pf  Test_SimTime.pf  Test_StreamHandler.pf  Test_StringUtilities.pf  Test_TextHandler.pf  Test_newFormatParser.pf  Test_yaFyaml_ConfigBuilder.pf  initTests.F90  init_tests.F90  testSuites.inc
tools/: ci-install-gfe.bash  travis-install-gfe.bash
