include_directories(${CMAKE_BINARY_DIR}/src)
add_executable(basicLogging.x basicLogging.F90)
add_executable(loggingWithFormat.x loggingWithFormat.F90)
add_executable(fileLogging.x fileLogging.F90)
target_link_libraries(basicLogging.x logger pfunit $ENV{FTL}/lib/libftl.a)
target_link_libraries(loggingWithFormat.x logger pfunit $ENV{FTL}/lib/libftl.a)
target_link_libraries(fileLogging.x logger pfunit $ENV{FTL}/lib/libftl.a)
if (MPI)
   add_executable(app.x app.F90)
   target_link_libraries(app.x logger pfunit $ENV{FTL}/lib/libftl.a)
   add_executable(mpiLogging.x mpiLogging.F90)
   target_link_libraries(mpiLogging.x logger pfunit $ENV{FTL}/lib/libftl.a)
endif()  
