include_directories(${CMAKE_BINARY_DIR}/src)
add_executable(basicLogging.x basicLogging.F90)
target_link_libraries(basicLogging.x logger pfunit )
add_executable(loggingWithFormat.x loggingWithFormat.F90)
target_link_libraries(loggingWithFormat.x logger pfunit )
if (MPI)
   add_executable(app.x app.F90)
   target_link_libraries(app.x logger pfunit )
   add_executable(mpiFileLogging.x mpiFileLogging.F90)
   target_link_libraries(mpiFileLogging.x logger pfunit )
endif()  
